JBEHAVE-1530 Restore JDK 8 compatibility